# facebook_data_parser

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/activity/: messages.rs  mod.rs
