[package]
name = "facebook_data_parser"
version = "0.1.0"
edition = "2021"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
enum-iterator = "1.5.0"
glob = "0.3.1"
rayon = "1.8.1"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
